@@ -113,8 +113,40 @@ namespace CIAO
       RTI_DDS_CHECK_MASK (mask, ::DDS::RELIABLE_READER_ACTIVITY_CHANGED_STATUS, ret);
 #endif
 
-#undef RTI_ADD_MASK
 #undef RTI_DDS_CHECK_MASK
+    }
+
+    inline const char * translate_qospolicyid_t (DDS::QosPolicyId_t id)
+    {
+#define RTI_DDS_POLICYID_T(X) case X: return #X
+      switch (id)
+        {
+          RTI_DDS_POLICYID_T (DDS::INVALID_QOS_POLICY_ID);
+          RTI_DDS_POLICYID_T (DDS::USERDATA_QOS_POLICY_ID);
+          RTI_DDS_POLICYID_T (DDS::DURABILITY_QOS_POLICY_ID);
+          RTI_DDS_POLICYID_T (DDS::PRESENTATION_QOS_POLICY_ID);
+          RTI_DDS_POLICYID_T (DDS::DEADLINE_QOS_POLICY_ID);
+          RTI_DDS_POLICYID_T (DDS::LATENCYBUDGET_QOS_POLICY_ID);
+          RTI_DDS_POLICYID_T (DDS::OWNERSHIP_QOS_POLICY_ID);
+          RTI_DDS_POLICYID_T (DDS::OWNERSHIPSTRENGTH_QOS_POLICY_ID);
+          RTI_DDS_POLICYID_T (DDS::LIVELINESS_QOS_POLICY_ID);
+          RTI_DDS_POLICYID_T (DDS::TIMEBASEDFILTER_QOS_POLICY_ID);
+          RTI_DDS_POLICYID_T (DDS::PARTITION_QOS_POLICY_ID);
+          RTI_DDS_POLICYID_T (DDS::RELIABILITY_QOS_POLICY_ID);
+          RTI_DDS_POLICYID_T (DDS::DESTINATIONORDER_QOS_POLICY_ID);
+          RTI_DDS_POLICYID_T (DDS::HISTORY_QOS_POLICY_ID);
+          RTI_DDS_POLICYID_T (DDS::RESOURCELIMITS_QOS_POLICY_ID);
+          RTI_DDS_POLICYID_T (DDS::ENTITYFACTORY_QOS_POLICY_ID);
+          RTI_DDS_POLICYID_T (DDS::WRITERDATALIFECYCLE_QOS_POLICY_ID);
+          RTI_DDS_POLICYID_T (DDS::READERDATALIFECYCLE_QOS_POLICY_ID);
+          RTI_DDS_POLICYID_T (DDS::TOPICDATA_QOS_POLICY_ID);
+          RTI_DDS_POLICYID_T (DDS::GROUPDATA_QOS_POLICY_ID);
+          RTI_DDS_POLICYID_T (DDS::TRANSPORTPRIORITY_QOS_POLICY_ID);
+          RTI_DDS_POLICYID_T (DDS::LIFESPAN_QOS_POLICY_ID);
+          RTI_DDS_POLICYID_T (DDS::DURABILITYSERVICE_QOS_POLICY_ID);
+        }
+      return "***Unknown enum value, update RTI::translate_qospolicyid_t()";
+  #undef RTI_DDS_POLICYID_T
     }
   }
 }
